Implement limited MMU support for Binder fuzzing.
Change-Id: Ia1ee83c01d4283c41987c7a4d5b54cf3c6226aea

--- a/arch/lkl/mm/Makefile
+++ b/arch/lkl/mm/Makefile
@@ -3,3 +3,6 @@ KASAN_SANITIZE_kasan.o := n
 
 obj-y = bootmem.o
 obj-$(CONFIG_KASAN) += kasan.o
+
+obj-$(CONFIG_MMU) += tlb.o
+obj-$(CONFIG_MMU) += mem.o
