--- a/arch/lkl/Kconfig
+++ b/arch/lkl/Kconfig
@@ -1,6 +1,6 @@
 config LKL
        def_bool y
-       depends on !SMP && !MMU && !COREDUMP && !SECCOMP && !UPROBES && !COMPAT && !USER_RETURN_NOTIFIER
+       depends on !SMP && !COREDUMP && !SECCOMP && !UPROBES && !COMPAT && !USER_RETURN_NOTIFIER
        select ARCH_THREAD_STACK_ALLOCATOR
        select RWSEM_GENERIC_SPINLOCK
        select GENERIC_ATOMIC64
@@ -42,6 +42,9 @@ config LKL
        select GENERIC_STRNLEN_USER
        select HAVE_ARCH_KASAN
        select TRACING
+
+config MMU
+       def_bool y
 
 config LKL_FUZZING
        bool "LLVM fuzzing instrumentation"
