Implement Android Binder protobuf-mutator-based fuzzer.
Change-Id: I23de2834f8962c9dcf0818b331dd45c4e333c411

--- a/arch/lkl/configs/fuzzing_defconfig
+++ b/arch/lkl/configs/fuzzing_defconfig
@@ -191,3 +191,10 @@ CONFIG_KASAN_STACK_ENABLE=y
 CONFIG_KASAN_GENERIC=y
 CONFIG_KASAN_OUTLINE=y
 CONFIG_FRAME_WARN=0
+
+CONFIG_ANDROID_BINDER_IPC=y
+CONFIG_ANDROID_BINDER_DEVICES="binder"
+#CONFIG_ANDROID_BINDER_IPC_SELFTEST=y
+
+CONFIG_DEVTMPFS=y
+CONFIG_DEBUG_SPINLOCK=y
